src/main/kotlin/com/example/hierarchical_infolearn/global/error/common/NoAuthenticationException.kt
package com.example.hierarchical_infolearn.global.error.common

import com.example.hierarchical_infolearn.global.error.ErrorCode
import com.example.hierarchical_infolearn.global.error.data.GlobalException

object NoAuthenticationException: GlobalException(ErrorCode.NO_AUTHENTICATION)